force-app/main/default/objects/Game_Move__c/Game_Move__c.object-meta.xml
<CustomObject>
    <label>Game Move</label>
    <nameField>
        <displayFormat>MOVE-{00000}</displayFormat>
        <label>Game Move Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Moves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>