force-app/main/default/objects/Game_Move__c/fields/Game_Session__c.field-meta.xml
<CustomField>
    <fullName>Game_Session__c</fullName>
    <label>Game Session</label>
    <referenceTo>Game_Session__c</referenceTo>
    <relationshipLabel>Game Moves</relationshipLabel>
    <relationshipName>Game_Moves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>