force-app/main/default/objects/Game_Move__c/fields/Move_Number__c.field-meta.xml
<CustomField>
    <fullName>Move_Number__c</fullName>
    <label>Move Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>