force-app/main/default/objects/Game_Move__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Game Moves</relationshipLabel>
    <relationshipName>Game_Moves</relationshipName>
    <type>Lookup</type>
</CustomField>