force-app/main/default/objects/Game_Move__c/fields/Player_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Player_Symbol__c</fullName>
    <label>Player Symbol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>