force-app/main/default/objects/Game_Move__c/validationRules/Valid_Cell_Position.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Cell_Position</fullName>
    <active>true</active>
    <description>Ensures cell position is between 0 and 8</description>
    <errorConditionFormula
  >OR(Cell_Position__c &lt; 0, Cell_Position__c &gt; 8)</errorConditionFormula>
    <errorDisplayField>Cell_Position__c</errorDisplayField>
    <errorMessage>Cell position must be between 0 and 8.</errorMessage>
</ValidationRule>